# modules/backend/domain/survey/validation.go
@@ -1,21 +1,22 @@
-package entity
+package survey
 
 import (
 	"errors"
 	"time"
 
+	"github.com/mstrYoda/maasanketi.co/domain/response"
 	"github.com/mstrYoda/maasanketi.co/pkg/rescode"
 )
 
-func (s *Survey) newValidationError(field string, message string) error {
-	return rescode.SurveyResponseValidationFailed(errors.New(message)).SetData(rescode.R{
-		"field":     field,
-		"message":   message,
-		"namespace": "survey.answers",
-	})
+// IsExpired checks if the survey has expired
+func (s *Survey) IsExpired() bool {
+	if s.FinishesAt == nil {
+		return false // No expiration date means it never expires
+	}
+	return time.Now().After(*s.FinishesAt)
 }
 
-func (s *Survey) ValidateAnswers(answers Answers) error {
+func (s *Survey) ValidateAnswers(answers response.Answers) error {
 	for _, question := range s.Questions {
 		if err := s.validateByType(answers, question); err != nil {
 			return err
@@ -24,7 +25,7 @@ func (s *Survey) ValidateAnswers(answers Answers) error {
 	return nil
 }
 
-func (s *Survey) validateByType(answers Answers, question Question) error {
+func (s *Survey) validateByType(answers response.Answers, question Question) error {
 	switch question.Type {
 	case QuestionTypeText:
 		return s.validateText(answers, question)
@@ -40,7 +41,7 @@ func (s *Survey) validateByType(answers Answers, question Question) error {
 	return nil
 }
 
-func (s *Survey) validateText(answers Answers, question Question) error {
+func (s *Survey) validateText(answers response.Answers, question Question) error {
 	val, ok := answers[question.ID].(string)
 	if !ok {
 		if question.Required {
@@ -54,7 +55,7 @@ func (s *Survey) validateText(answers Answers, question Question) error {
 	return nil
 }
 
-func (s *Survey) validateNumber(answers Answers, question Question) error {
+func (s *Survey) validateNumber(answers response.Answers, question Question) error {
 	_, ok := answers[question.ID].(float64)
 	if !ok {
 		if question.Required {
@@ -65,7 +66,7 @@ func (s *Survey) validateNumber(answers Answers, question Question) error {
 	return nil
 }
 
-func (s *Survey) validateSelect(answers Answers, question Question) error {
+func (s *Survey) validateSelect(answers response.Answers, question Question) error {
 	val, ok := answers[question.ID].(string)
 	if !ok {
 		if question.Required {
@@ -79,7 +80,7 @@ func (s *Survey) validateSelect(answers Answers, question Question) error {
 	return nil
 }
 
-func (s *Survey) validateMultiSelect(answers Answers, question Question) error {
+func (s *Survey) validateMultiSelect(answers response.Answers, question Question) error {
 	val, ok := answers[question.ID].([]interface{})
 	if !ok {
 		if question.Required {
@@ -98,7 +99,7 @@ func (s *Survey) validateMultiSelect(answers Answers, question Question) error {
 	return nil
 }
 
-func (s *Survey) validateBoolean(answers Answers, question Question) error {
+func (s *Survey) validateBoolean(answers response.Answers, question Question) error {
 	_, ok := answers[question.ID].(bool)
 	if !ok {
 		if question.Required {
@@ -109,16 +110,10 @@ func (s *Survey) validateBoolean(answers Answers, question Question) error {
 	return nil
 }
 
-// ValidateCompletion checks if the survey response meets the minimum completion time requirement
-func (sr *SurveyResponse) ValidateCompletion(survey *Survey) error {
-	if sr.CompletedAt == nil {
-		return rescode.SurveyResponseNotCompleted(errors.New("survey is not completed"))
-	}
-	minCompletionTime := time.Duration(survey.MinCompletionTimeMin) * time.Minute
-	actualCompletionTime := sr.CompletedAt.Sub(sr.StartedAt)
-	if actualCompletionTime < minCompletionTime {
-		return rescode.SurveyCompletionTimeTooShort(errors.New("survey completed too quickly, minimum completion time not met"))
-	}
-
-	return nil
+func (s *Survey) newValidationError(field string, message string) error {
+	return rescode.SurveyResponseValidationFailed(errors.New(message)).SetData(rescode.R{
+		"field":     field,
+		"message":   message,
+		"namespace": "survey.answers",
+	})
 }
