# modules/backend/handler/response_complete_handler.go
@@ -1,21 +1,32 @@
 package handler
 
 import (
+	"context"
 	"errors"
 	"time"
 
 	"github.com/gofiber/fiber/v2"
+	"github.com/mstrYoda/maasanketi.co/domain/response"
+	"github.com/mstrYoda/maasanketi.co/domain/survey"
 	"github.com/mstrYoda/maasanketi.co/pkg/rescode"
-	"github.com/mstrYoda/maasanketi.co/repository"
 )
 
-type SurveyResponseCompleteRequest struct {
+type ResponseCompleteRepo interface {
+	FindByID(ctx context.Context, id string) (*response.Response, error)
+	Update(ctx context.Context, response *response.Response) error
+}
+
+type ResponseCompleteSurveyRepo interface {
+	FindBySlug(ctx context.Context, slug string) (*survey.Survey, error)
+}
+
+type ResponseCompleteRequest struct {
 	Slug       string                 `params:"slug" validate:"required,slug"`
 	ResponseID string                 `params:"responseId" validate:"required,uuid"`
 	Answers    map[string]interface{} `json:"answers" validate:"required"`
-} // @name SurveyResponseCompleteRequest
+} // @name ResponseCompleteRequest
 
-// CompleteSurveyResponse completes a survey response
+// ResponseCompleteRequest completes a survey response
 // @Summary Complete a survey response
 // @Description Complete a survey response with the provided data
 // @Tags survey-responses
@@ -23,46 +34,47 @@ type SurveyResponseCompleteRequest struct {
 // @Produce json
 // @Param slug path string true "Survey Slug"
 // @Param responseId path string true "Response ID"
-// @Param response body SurveyResponseCompleteRequest true "Response data"
-// @Success 200 {object} entity.ViewSurveyResponse
+// @Param response body ResponseCompleteRequest true "Response data"
+// @Success 200 {object} response.ViewDefault
 // @Failure 400 {object} map[string]interface{}
 // @Failure 404 {object} map[string]interface{}
 // @Failure 500 {object} map[string]interface{}
 // @Router /surveys/{slug}/responses/{responseId} [patch]
-func SurveyResponseComplete(repo repository.SurveyRepository) fiber.Handler {
+func ResponseComplete(surveyRepo ResponseCompleteSurveyRepo, responseRepo ResponseCompleteRepo) fiber.Handler {
 	return func(c *fiber.Ctx) error {
-		var req SurveyResponseCompleteRequest
+		var req ResponseCompleteRequest
 		if err := c.BodyParser(&req); err != nil {
 			return rescode.ValidationFailed(err)
 		}
 		if err := c.ParamsParser(&req); err != nil {
 			return rescode.ValidationFailed(err)
 		}
-		survey, err := repo.FindBySlug(c.UserContext(), req.Slug)
+		survey, err := surveyRepo.FindBySlug(c.UserContext(), req.Slug)
 		if err != nil {
 			return rescode.SurveyNotFound(errors.New("survey not found"))
 		}
 		if survey.IsExpired() {
 			return rescode.SurveyExpired(errors.New("survey has expired"))
 		}
-		response, err := repo.ResponseFindByID(c.UserContext(), req.ResponseID)
+		res, err := responseRepo.FindByID(c.UserContext(), req.ResponseID)
 		if err != nil {
 			return rescode.SurveyNotFound(errors.New("survey response not found"))
 		}
-		if response.SurveyID != survey.ID {
+		if res.SurveyID != survey.ID {
 			return rescode.SurveyResponseNotFound(errors.New("survey response does not belong to the specified survey"))
 		}
 		if err := survey.ValidateAnswers(req.Answers); err != nil {
 			return err
 		}
-		if err := response.Complete(survey); err != nil {
+		if !survey.IsCompletable() {
+			return rescode.SurveyCompletionTimeTooShort(errors.New("survey completion time is too short"))
+		}
+		res.Complete()
+		res.Answers = req.Answers
+		res.UpdatedAt = time.Now()
+		if err := responseRepo.Update(c.UserContext(), res); err != nil {
 			return err
 		}
-		response.Answers = req.Answers
-		response.UpdatedAt = time.Now()
-		if err := repo.ResponseUpdate(c.UserContext(), response); err != nil {
-			return err
-		}
-		return c.JSON(response)
+		return c.JSON(res)
 	}
 }
